# Bones

./: CMakeLists.txt
src/Bones/: BMesh.cpp  BMesh.h  Bones.h  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Enviroment.cpp  Enviroment.h  GameObject.cpp  GameObject.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  MaterialAttribute.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Shader.h  Transform.h  transform.cpp  transform.h  triRenderer.cpp  triRenderer.h
src/Bones/testing/: Texture.h
src/OpenGL/: ShaderProgram.h  Texture.h  VertexArray.h  VertexBuffer.h  triRenderer.cpp  triRenderer.h
src/game/: main.cpp
src/rend/: Context.h  Mesh.cpp  Mesh.h  Shader.h  Texture.h
